--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
+  "scripts": {
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "server": "node server.js"
+  },
   "devDependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.4",
+    "express": "^4.17.2",
     "hint": "^6.1.9",
+    "html-webpack-plugin": "^5.5.0",
     "parcel": "^2.3.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^21.0.0",
     "stylelint-csstree-validator": "^1.9.0",
-    "stylelint-scss": "^3.21.0"
+    "stylelint-scss": "^3.21.0",
+    "webpack": "^5.68.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-middleware": "^5.3.1",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "luxon": "^2.3.0"
